--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -14,9 +14,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 
-    <!--Font Awesome-->
-  <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
-
 
     <title>React App</title>
   </head>
@@ -33,5 +30,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!--CSS-->
+      <script src="https://kit.fontawesome.com/d71dc139e1.js" crossorigin="anonymous"></script>
+
   </body>
+
 </html>
